[project]
name = "qwen-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "flash-attn>=2.7.4.post1",
    "lightning>=2.5.1.post0",
    "ninja>=1.11.1.4",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformer-lens>=2.15.0",
    "trl>=0.15.2",
    "unsloth>=2025.4.4",
]

[tool.uv]
# Tell uv “always build this package inside the main venv”
no-build-isolation-package = ["flash-attn"]

# (Optional) give uv the metadata flash‑attn hides so it can resolve
[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch"]   # what the wheel really needs

[[tool.uv.index]]            # define the index once
name     = "pytorch-cu128"
url      = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true
