[project]
name = "conf-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "flash-attn>=2.7.4.post1",
    "lightning>=2.5.1.post0",
    "ninja>=1.11.1.4",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformer-lens>=2.15.0",
    "trl>=0.15.2",
    "unsloth>=2025.4.4",
    "vllm>=0.9.0",
    "xformers>=0.0.30",
]

# Explicitly control where packages come from
# [tool.uv.sources]
# torch = { index = "pytorch-cu128" }
# torchaudio = { index = "pytorch-cu128" }
# torchvision = { index = "pytorch-cu128" }

# [[tool.uv.index]]
# name = "pytorch-cu128"
# url = "https://download.pytorch.org/whl/cu128"
# explicit = true
